--- a/homework/于泳.md
+++ b/homework/于泳.md
@@ -1,3 +1,3 @@
-<div style="font-size:18px;text-align:center">大教堂与集市读后感</div>
+<h1 align='center'>大教堂与集市读后感</h1>
 
-测试使用,仅测试commit和 Pull Requests，作业内容后期提交
+测试使用,仅测试commit和 Pull Requests,以及MarkDown语法，作业内容后期提交
