添加点评信息

--- a/homework/nick0314221.md
+++ b/homework/nick0314221.md
@@ -7,3 +7,9 @@
 另一个重要问题是，如何让项目满足用户需求？项目成功的因素有很多，但最根本的是要满足用户需求。从我的经验来看，这恰恰是最难实现的，即使实现了，代价也可能超过预期。Eric指出了另外一种实现需求的方法，让最懂需求的人（用户）直接参与开发。早发布、常发布，不断根据用户反馈进行完善。这与敏捷开发理念是一致的，而后者已经在商业软件公司中十分流行。但是这些也是有限制和前提的，除了对用户能力要求较高外，还包括行业特点、公司文化等因素。
      
 我认为大教堂与市集两种模式并不对立。Eric也指出市集模式的前提是不能从零开始。那么从零开始的最好方法仍然是大教堂模式，但是当项目走到某个程度或规模的时候，市集模式可能更为合适。从团队角度来看，核心成员（2~3人）仍用大教堂模式，而外围成员采用市集模式更为有效。而且我认为在传统环境中更多、更恰当地吸收市集模式的理念也是十分必要的。
+
+## 点评 ##
+你的读后感结合了自己的经验和感受，很好。
+开源的开发者乐意从事开源开发，从某种意义上来说是一种个人价值的体现。传统的管理的
+激励机制很少顾及到这方面。 由于代码是大家都能看到的，开源开发者要证明自己实力的>唯一途径就是拿出来练一练，整个项目团队开发的目标就是努力完善项目。[Meritocracy]i(http://www.apache.org/foundation/how-it-works.html#meritocracy)就很好总结了这一
+理念。
