Fixed a typo of nick0314221.md

--- a/homework/nick0314221.md
+++ b/homework/nick0314221.md
@@ -11,5 +11,5 @@
 ## 点评 ##
 你的读后感结合了自己的经验和感受，很好。
 开源的开发者乐意从事开源开发，从某种意义上来说是一种个人价值的体现。传统的管理的
-激励机制很少顾及到这方面。 由于代码是大家都能看到的，开源开发者要证明自己实力的>唯一途径就是拿出来练一练，整个项目团队开发的目标就是努力完善项目。[Meritocracy]i(http://www.apache.org/foundation/how-it-works.html#meritocracy)就很好总结了这一
+激励机制很少顾及到这方面。 由于代码是大家都能看到的，开源开发者要证明自己实力的>唯一途径就是拿出来练一练，整个项目团队开发的目标就是努力完善项目。[Meritocracy](http://www.apache.org/foundation/how-it-works.html#meritocracy)就很好总结了这一
 理念。
