--- a/homework/于泳.md
+++ b/homework/于泳.md
@@ -1,3 +1,6 @@
 <h1 align='center'>大教堂与集市读后感</h1>
 
-<p>&nbsp;&nbsp;&nbsp;&nbsp;测试使用,仅测试commit和 Pull Requests,以及MarkDown语法，作业内容后期提交</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;在我的认知里，开源软件就是免费软件，虽然都说开源不等于免费。说实话，在我开发项目中，充满了各种的开源软件，ssh框架，POI、AXIS、CXF、lucene等等。
+
+
+</p>
