--- a/homework/于泳.md
+++ b/homework/于泳.md
@@ -4,5 +4,8 @@
 
 
 </p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;
-《/p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;我认为使用开源好处有一下几点
+<ul>
+  <li>不要重复发明轮子，使用开源软件可以不发明或减少发明轮子，比如在开发过程中使用ssh框架，使用log4j等日志控件，使用POI，IText等PDF控件，你只需去关注你得业务流程，web访问，开发效率，以及怎么读写excel和pdf文件操心了</li>
+</ul>
+</p>
