--- a/homework/于泳.md
+++ b/homework/于泳.md
@@ -8,7 +8,12 @@
 <ul>
   <li>不要重复发明轮子，使用开源软件可以不发明或减少发明轮子，比如在开发过程中使用ssh框架，使用log4j等日志控件，使用POI，IText等PDF控件，你只需去关注你得业务流程，web访问，开发效率，以及怎么读写excel和pdf文件操心了</li>
   <li>节约时间，因为我们不会再去开发一个mvc框架，也不会再去开发一个云计算平太框架。</li>
-  <li>代码开源，开源的代码，为我们带来了方便，也带来麻烦，这对技术的要求可不是一般的高哦</li>
+  <li>代码开源，开源的代码，为我们带来了方便，也带来麻烦，这对技术的要求可不是一般的高哦，开源的代码可以在我盟使用这个框架时，某些功能无法满足时或遇到bug时，可以对源码进行修改，以满足我们的需求</li>
   <li></li>
+</ul>
+不过使用开源软件的缺点也是显而易见
+<ul>
+  <li></li>
+   <li></li>
 </ul>
 </p>
