--- a/homework/于泳.md
+++ b/homework/于泳.md
@@ -11,9 +11,13 @@
   <li>代码开源，开源的代码，为我们带来了方便，也带来麻烦，这对技术的要求可不是一般的高哦，开源的代码可以在我盟使用这个框架时，某些功能无法满足时或遇到bug时，可以对源码进行修改，以满足我们的需求</li>
   <li></li>
 </ul>
-不过使用开源软件的缺点也是显而易见
+
+</p>
+<p>
+&nbsp;&nbsp;&nbsp;&nbsp;不过使用开源软件的缺点也是显而易见
 <ul>
   <li></li>
    <li></li>
 </ul>
+
 </p>
