--- a/homework/于泳.md
+++ b/homework/于泳.md
@@ -8,15 +8,14 @@
 <ul>
   <li>不要重复发明轮子，使用开源软件可以不发明或减少发明轮子，比如在开发过程中使用ssh框架，使用log4j等日志控件，使用POI，IText等PDF控件，你只需去关注你得业务流程，web访问，开发效率，以及怎么读写excel和pdf文件操心了</li>
   <li>节约时间，因为我们不会再去开发一个mvc框架，也不会再去开发一个云计算平太框架。</li>
-  <li>代码开源，开源的代码，为我们带来了方便，也带来麻烦，这对技术的要求可不是一般的高哦，开源的代码可以在我盟使用这个框架时，某些功能无法满足时或遇到bug时，可以对源码进行修改，以满足我们的需求</li>
-  <li></li>
+  <li>代码开源，开源的代码，为我们带来了方便，也带来麻烦，这对技术的要求可不是一般的高哦，开源的代码可以在我盟使用这个框架时，某些功能无法满足时或遇到bug时，可以对源码进行修改，以满足我们的需求。这个是我最喜欢的，我就曾经修改过一些程序的代码，以满足功能的实现。</li>
 </ul>
 
 </p>
 <p>
 &nbsp;&nbsp;&nbsp;&nbsp;不过使用开源软件的缺点也是显而易见
 <ul>
-  <li></li>
+  <li>没有技术支持，一切都得靠自己。不是所有开源软件都有详细的文档的，而且有文档也不能保证正确，没有文档还好，因为你知道只能自己研究，但是文档错了才是要命，当你辛辛苦苦按照文档完成使用，却发现结果不对，那才叫郁闷呢，这是你开始往往不会认为是文档错了，而是以为自己那做错了，当你发现文档出错，有时都不知道是多少天后的事情了</li>
    <li></li>
 </ul>
 
