--- a/homework/于泳.md
+++ b/homework/于泳.md
@@ -16,7 +16,11 @@
 &nbsp;&nbsp;&nbsp;&nbsp;不过使用开源软件的缺点也是显而易见
 <ul>
   <li>没有技术支持，一切都得靠自己。不是所有开源软件都有详细的文档的，而且有文档也不能保证正确，没有文档还好，因为你知道只能自己研究，但是文档错了才是要命，当你辛辛苦苦按照文档完成使用，却发现结果不对，那才叫郁闷呢，这是你开始往往不会认为是文档错了，而是以为自己那做错了，当你发现文档出错，有时都不知道是多少天后的事情了</li>
-   <li></li>
+  <li>兼容性差，版本升级后，很多都不兼容就有版本，这为版本升级带来麻烦，我最近就在为一个开源控件升级而头疼</li>
+  <li>虽然代码开源，但是代码并没有完整的开发说明手册，这位代码编译带来很大问题，如果使用maven等构建工具还好，如果没有，那就头疼吧，这要是最近我头疼的事情。</li> 
 </ul>
 
+</p>
+<p>
+&nbsp;&nbsp;&nbsp;&nbsp;
 </p>
