--- a/homework/于泳.md
+++ b/homework/于泳.md
@@ -22,5 +22,6 @@
 
 </p>
 <p>
-&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;综上所述，我认为，使用开源产品对能力要求较高，要能解决一切可能出现的问题，未使用非开源软件的好处就是，出问题里可以找到人帮你解决，对技术要求不高。对于哪些技术实力强，经费有限的公司，而且对产品的稳定性要求不是特别高的话更适合使用开源产品。对那些技术实力不足，但是经费充足，而且要求高稳定性的企业（如政府，银行，电信等）更是和使用非开源产品
+
 </p>
