添加点评信息

--- a/homework/cmz2013.md
+++ b/homework/cmz2013.md
@@ -7,3 +7,6 @@ Linux是散布在全球各地的几千名开发者业余敲打铸成,为什么Li
 当你开始社区建设的时候，这篇文章也提出了非常有价值的建议：1. 你的程序不一定要工作的非常好，但它一定要能运行，能说服潜在的合作者它可以在可预见的将来进化成真正漂亮的东西。2. 早发布、常发布，听取用户的意见。“早发布、常发布”策略的一个后果就是通过快速公布反馈修补来把重复做功最小化。另外，如果你给外边的世界写程序，你不得不聆听你的顾客——就算他们不付你钱也是这个道理。3. 当你的代码变得既优良又简单的时候，这时你知道它上了正轨了。
 
 最后，非常感谢老师，带领我们认识了开源世界！
+
+** 点评 **
+你对教堂与集市这篇文章的总结很好，但是缺乏一点自己的感受，希望你能结合到自己的某个点把问题描述得更透彻一些。
