--- a/homework/wyh267_吴英昊.md
+++ b/homework/wyh267_吴英昊.md
@@ -35,7 +35,8 @@
 
 现在的软件开发人员，如果没有接触过开源软件，那他可能算不上一个合格的开发人员，相信到以后，一个开发人员没有参与过一个开源项目，那他也算不上一个合格的开发人员吧。
 
-
+** 点评 **
+你文中的各个时代的划分挺有新意的。我这边主要想补充一下对于航天时代的展望。的确云时代的基础构件到应用实现大多都是建立在开源软件的基础之上的，这和开源项目的发展以及云计算的特殊环境有很大的关系。不过我想指出的是在计算机应用的初期，很大软件也是开源的，还有开源项目开发和我们经常所说的学术研究基本是一样的工作原理（开发成果，同级评审，持续演进）。开源运动从某种程度上是顺应了知识创新的需要，通过降低知识的流通成本来鼓励大家的创新。
 
 
 
