--- a/homework/席宏盛的作业.md
+++ b/homework/席宏盛的作业.md
@@ -11,3 +11,6 @@
      因此，我觉得如果有一天我们国家的军事能力足够强，我们的信息网络足够安全，我们的开发人员水平足够高，在军用软件的
  研制过程中，实现软件开源也不是不可能的事情。这样也可以让更多的军事爱好者参与到其中来，让更多的民间软件高手一起为我
  们国家的军用软件研制做出贡献，不断更新不断发展我国的军用软件研制事业。
+
+** 点评 **
+开源和军用软件的确是一个很好的题目。开源给软件开发带来的最大动力是大家有更多的掌控力，但是这对软件开放者的要求也比较高。你开始提到的开源软件在军用软件研制过程中问题应该是你对开源项目的掌控不够所造成的。 其实目前军事信息化建设更多采用的是拿来主义，麒麟操作系统也是建立在FreeBSD基础之上的，如果你们能根据自己的需要整理出一套开源项目使用规范，就会很好的指导你们的项目开发。
