--- a/homework/张奕航.md
+++ b/homework/张奕航.md
@@ -6,3 +6,6 @@
     如;金山office，永中office，红旗office,甚至于IBM Lotus Symphony.开源软件还为他们制造了 后发优势，提供了追赶和超越发达国家软件业的机会.但是从盈利模式来说，对开源软件公司来说依然任重道远，因为这些组织和企业没有找到可行的赢利模式，从而没有足够的资金支持企业持续发展下去。对于开源软件发展来说，最大的瓶颈就是人才，或者说是高级人才。
     总之，对公司决策者来说，到底应该选用开源软件还是商业软件来，真的应该好好评估一下。我建议如果公司本省没有研发，却非常依赖一些软件去开展业务时 ，我建议还是用商业软件，便于维护和升级。但在公司如果有研发团队，大可以用开源软件来实现自己的业务。
 
+** 点评 **
+这里需要指出的是永中office和金山office不是基于open office开放的。
+开源软件的盈利是开源生态圈建设的重要一环，健康的开源生态圈可以为开源项目提供源源不断的动力。
