--- a/homework/齐楠.md
+++ b/homework/齐楠.md
@@ -3,3 +3,7 @@
 开源软件是免费的，无报酬的，开源人如何才能坚持下去，等待项目成功的一刻？极大的热情才是推动开源工作的精神源泉，兴趣是最好的动力。
 
 我也会以极大的热情投身于开源软件的工作中，投入在自己感兴趣的项目中。
+
+** 点评 ** 
+从知识创新的角度来说，开源的确为我们展示了一个美好和谐的合作典范。
+免费，无报酬应该是从知识交流的角度来说的，当然开源软件的软件许可很宽松，对免费使用没有很明确的规定。
