添加点评内容

--- a/homework/于泳.md
+++ b/homework/于泳.md
@@ -7,8 +7,8 @@
 <p>&nbsp;&nbsp;&nbsp;&nbsp;我认为使用开源好处有一下几点
 <ul>
   <li>不要重复发明轮子，使用开源软件可以不发明或减少发明轮子，比如在开发过程中使用ssh框架，使用log4j等日志控件，使用POI，IText等PDF控件，你只需去关注你得业务流程，web访问，开发效率，以及怎么读写excel和pdf文件操心了</li>
-  <li>节约时间，因为我们不会再去开发一个mvc框架，也不会再去开发一个云计算平太框架。</li>
-  <li>代码开源，开源的代码，为我们带来了方便，也带来麻烦，这对技术的要求可不是一般的高哦，开源的代码可以在我盟使用这个框架时，某些功能无法满足时或遇到bug时，可以对源码进行修改，以满足我们的需求。这个是我最喜欢的，我就曾经修改过一些程序的代码，以满足功能的实现。</li>
+  <li>节约时间，因为我们不会再去开发一个mvc框架，也不会再去开发一个云计算平台框架。</li>
+  <li>代码开源，开源的代码，为我们带来了方便，也带来麻烦，这对技术的要求可不是一般的高哦，开源的代码可以在我们使用这个框架时，某些功能无法满足时或遇到bug时，可以对源码进行修改，以满足我们的需求。这个是我最喜欢的，我就曾经修改过一些程序的代码，以满足功能的实现。</li>
 </ul>
 
 </p>
@@ -16,7 +16,7 @@
 &nbsp;&nbsp;&nbsp;&nbsp;不过使用开源软件的缺点也是显而易见
 <ul>
   <li>没有技术支持，一切都得靠自己。不是所有开源软件都有详细的文档的，而且有文档也不能保证正确，没有文档还好，因为你知道只能自己研究，但是文档错了才是要命，当你辛辛苦苦按照文档完成使用，却发现结果不对，那才叫郁闷呢，这是你开始往往不会认为是文档错了，而是以为自己那做错了，当你发现文档出错，有时都不知道是多少天后的事情了</li>
-  <li>兼容性差，版本升级后，很多都不兼容就有版本，这为版本升级带来麻烦，我最近就在为一个开源控件升级而头疼</li>
+  <li>兼容性差，版本升级后，很多都不兼容旧版本，这为版本升级带来麻烦，我最近就在为一个开源控件升级而头疼</li>
   <li>虽然代码开源，但是代码并没有完整的开发说明手册，这位代码编译带来很大问题，如果使用maven等构建工具还好，如果没有，那就头疼吧，这要是最近我头疼的事情。</li> 
 </ul>
 
@@ -25,3 +25,7 @@
 &nbsp;&nbsp;&nbsp;&nbsp;综上所述，我认为，使用开源产品对能力要求较高，要能解决一切可能出现的问题，未使用非开源软件的好处就是，出问题里可以找到人帮你解决，对技术要求不高。对于哪些技术实力强，经费有限的公司，而且对产品的稳定性要求不是特别高的话更适合使用开源产品。对那些技术实力不足，但是经费充足，而且要求高稳定性的企业（如政府，银行，电信等）更是和使用非开源产品
 
 </p>
+
+** 点评 ** 
+想使用好开源软件不是一件容易的事情。首先你需要研究代码，其实读代码不是一件痛苦的事情，带着问题挖代码是一件很有意思的事情。还有就是要努力融入社区，在社区里你所有的投入都是会有回报的，比如你可以完善快速入门示例，修改文档不正确的地方，或者把你头疼的问题向社区分享。
+希望你能把我在课上讲到如何使用好开源软件那章的内容再好好看看，我相信你现在遇到的很多头疼的事情都会迎刃而解。 
