--- a/homework/郭禄鹏.md
+++ b/homework/郭禄鹏.md
@@ -11,3 +11,13 @@
 4.	集思广益：正所谓人多力量大，在庞大的Linux社区，大家很快就会把大部分bug都找出来，并快速的修改。而不像大教堂模式，只能找到少数bug，而且修正的周期很长
 
 最后，集市模式虽然有这么多的好处，但是仍然有很多需要注意的：不能从零开始，最好采用双层架构；项目要吸引人、可以说服潜在合作者，所以开源项目的领导人以及创意非常重要！
+
+//老师说还是要注重一下结合自己的工作经验来谈一谈，不过这个还是令我颇为为难啊。
+
+怎么说呢，从客观来讲，就我的工作经验来看是绝对不会赞同使用集市开发的。为什么呢？这个要从从事的软开的特殊方向来说了。我在国有的大型软件公司做软开工作。而我们部门的开发任务集中在国家的气象地震方面，这也就带来了高端的保密性。正是由此，导致我们绝不可能在任何意义上来使用开源软件。其最大的忧虑就在于安全保密性方面。
+另外我个人公司开发的几个项目却相对喜欢使用开源。原因则是在于开源软件的极端廉价性以及大量开发人员保证的高速更新高速修改bug方面。
+从我国有公司的角度来看，一个三千万左右的项目周期为半年左右，开发人员通常为四至六人。这在很大程度上也是为什么不会考虑去做开源的原因。国家投入三千万做出来的系统是绝对不允许除使用者以外的任何人偷窥的。
+而从我自己的公司来讲，本来其实就是小打小闹，作为公司而言其实更像一个小组。于是就明显在兴趣使然的基础下会对开源抱有莫大的兴趣。毕竟所有投资实际上都是自己的支出，那么开源以后也许还可以吸引高端企业的扶植性投资，这样开源就是一个一举两得好的办法。
+所以从我的角度来说，个人以为开源与否甚至是否可以使用开源代码来讲，基本取决于项目工程的投入大小。集市明显是一个小投入大产出的绝佳方式。但是感觉在怎么样的产出，也仅能适用于千万级以下的"小"项目。而大教堂恰恰相反，需要巨量的投入，同时回报也会很高。适用于数千万或者亿以上的大项目，同时这样的项目往往也有保密性等等的考虑，难以去开放自己的代码或者信任开源软件。
+
+总的来说，应该说真正的开源（集市）是"穷人"玩的东西，而大教堂通常都是在"教堂"的角度来玩的，也就必然性的要花大钱先建立起"教堂"才能开始玩。这也是我看完本文再结合自己的工作经验得出来的最大的感悟。如果我自己的公司，在尽可能缩减支出的条件下几乎是必然会选择开源操作的。而同样从我工作的公司的角度来讲，既然已经有了大量的资金来保障整个项目的运作，那么就不在乎多花些钱来签保密协议！大教堂的性价比也许不高，但是项目周期稳定可靠。集市性价比高，但是却难以保证项目的质量以及项目的周期。
