添加点评信息

--- a/homework/郭禄鹏.md
+++ b/homework/郭禄鹏.md
@@ -21,3 +21,6 @@
 所以从我的角度来说，个人以为开源与否甚至是否可以使用开源代码来讲，基本取决于项目工程的投入大小。集市明显是一个小投入大产出的绝佳方式。但是感觉在怎么样的产出，也仅能适用于千万级以下的"小"项目。而大教堂恰恰相反，需要巨量的投入，同时回报也会很高。适用于数千万或者亿以上的大项目，同时这样的项目往往也有保密性等等的考虑，难以去开放自己的代码或者信任开源软件。
 
 总的来说，应该说真正的开源（集市）是"穷人"玩的东西，而大教堂通常都是在"教堂"的角度来玩的，也就必然性的要花大钱先建立起"教堂"才能开始玩。这也是我看完本文再结合自己的工作经验得出来的最大的感悟。如果我自己的公司，在尽可能缩减支出的条件下几乎是必然会选择开源操作的。而同样从我工作的公司的角度来讲，既然已经有了大量的资金来保障整个项目的运作，那么就不在乎多花些钱来签保密协议！大教堂的性价比也许不高，但是项目周期稳定可靠。集市性价比高，但是却难以保证项目的质量以及项目的周期。
+
+## 点评 ##
+很高兴你能和我们分享你的感悟。我不太认同你说的开源是“穷人”玩的东西。我不清楚你多阿里巴巴，淘宝玩开源有多少了解，淘宝的业务支持系统是如何发展起来的，还有就是很多不差钱的互联网公司为什么也大量使用着开源软件。还有就是美国军方也在使用很多开源软件来搭建他们的业务系统。要用好开源软件也不是一件简单的事情，开源更大程度是解放的人的生产力，让我们有更大的控制力，而不是简单的免费软件。
